--- a/indexgrid.html
+++ b/indexgrid.html
@@ -27,7 +27,7 @@
     </div>
     <div class="bgcolor">
         <div class="gridbanner" id="slider">
-            <figure class="container">
+            <figure class="container media">
                 <img src="image/slide-1.jpg" alt="">
                 <img src="image/slide-2.jpg" alt="">
                 <img src="image/slide-3.jpg" alt="">
